Fixed alignment bug

--- a/src/styles/modal.module.css
+++ b/src/styles/modal.module.css
@@ -16,10 +16,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; 
+  /* align-items: center;  */
   overflow-y: scroll;
   overflow-x: hidden;
   gap: 2rem;
+  padding-left: 3rem;
 }
 
 .header {
@@ -123,8 +124,19 @@
   padding: 0.75rem;
 }
 
+.topContainer {
+  max-width: 1000px;
+}
+.middleContainer {
+  max-width: 1000px;
+}
+.bottomContainer {
+  max-width: 1000px;
+}
+
 @media(max-width: 500px) {
   .modal {
     justify-content: flex-start;
+    padding-left: 1.5rem;
   }
 }
